--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2643,22 +2643,10 @@ I/O:</property>
                                       <widget class="GtkTable" id="table31">
                                         <property name="visible">True</property>
                                         <property name="border_width">3</property>
-                                        <property name="n_rows">4</property>
+                                        <property name="n_rows">3</property>
                                         <property name="n_columns">2</property>
                                         <property name="column_spacing">8</property>
                                         <property name="row_spacing">4</property>
-                                        <child>
-                                          <widget class="GtkLabel" id="label369">
-                                            <property name="visible">True</property>
-                                            <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">Source type:</property>
-                                            <property name="use_underline">True</property>
-                                          </widget>
-                                          <packing>
-                                            <property name="x_options">GTK_FILL</property>
-                                            <property name="y_options"></property>
-                                          </packing>
-                                        </child>
                                         <child>
                                           <widget class="GtkLabel" id="label397">
                                             <property name="visible">True</property>
@@ -2666,22 +2654,6 @@ I/O:</property>
                                             <property name="label" translatable="yes">Source device:</property>
                                           </widget>
                                           <packing>
-                                            <property name="top_attach">1</property>
-                                            <property name="bottom_attach">2</property>
-                                            <property name="x_options">GTK_FILL</property>
-                                            <property name="y_options"></property>
-                                          </packing>
-                                        </child>
-                                        <child>
-                                          <widget class="GtkLabel" id="network-source-type">
-                                            <property name="visible">True</property>
-                                            <property name="xalign">0</property>
-                                            <property name="label">label395</property>
-                                            <property name="selectable">True</property>
-                                          </widget>
-                                          <packing>
-                                            <property name="left_attach">1</property>
-                                            <property name="right_attach">2</property>
                                             <property name="x_options">GTK_FILL</property>
                                             <property name="y_options"></property>
                                           </packing>
@@ -2696,8 +2668,6 @@ I/O:</property>
                                           <packing>
                                             <property name="left_attach">1</property>
                                             <property name="right_attach">2</property>
-                                            <property name="top_attach">1</property>
-                                            <property name="bottom_attach">2</property>
                                             <property name="x_options">GTK_FILL</property>
                                             <property name="y_options"></property>
                                           </packing>
@@ -2710,8 +2680,8 @@ I/O:</property>
                                             <property name="use_underline">True</property>
                                           </widget>
                                           <packing>
-                                            <property name="top_attach">3</property>
-                                            <property name="bottom_attach">4</property>
+                                            <property name="top_attach">2</property>
+                                            <property name="bottom_attach">3</property>
                                             <property name="x_options">GTK_FILL</property>
                                             <property name="y_options"></property>
                                           </packing>
@@ -2720,11 +2690,11 @@ I/O:</property>
                                           <widget class="GtkLabel" id="label509">
                                             <property name="visible">True</property>
                                             <property name="xalign">1</property>
-                                            <property name="label" translatable="yes">Source model:</property>
+                                            <property name="label" translatable="yes">Device model:</property>
                                           </widget>
                                           <packing>
-                                            <property name="top_attach">2</property>
-                                            <property name="bottom_attach">3</property>
+                                            <property name="top_attach">1</property>
+                                            <property name="bottom_attach">2</property>
                                             <property name="x_options">GTK_FILL</property>
                                             <property name="y_options"></property>
                                           </packing>
@@ -2738,8 +2708,8 @@ I/O:</property>
                                           <packing>
                                             <property name="left_attach">1</property>
                                             <property name="right_attach">2</property>
-                                            <property name="top_attach">2</property>
-                                            <property name="bottom_attach">3</property>
+                                            <property name="top_attach">1</property>
+                                            <property name="bottom_attach">2</property>
                                             <property name="x_options">GTK_FILL</property>
                                             <property name="y_options"></property>
                                           </packing>
@@ -2753,8 +2723,8 @@ I/O:</property>
                                           <packing>
                                             <property name="left_attach">1</property>
                                             <property name="right_attach">2</property>
-                                            <property name="top_attach">3</property>
-                                            <property name="bottom_attach">4</property>
+                                            <property name="top_attach">2</property>
+                                            <property name="bottom_attach">3</property>
                                           </packing>
                                         </child>
                                       </widget>
@@ -2777,52 +2747,6 @@ I/O:</property>
                                 <property name="fill">False</property>
                                 <property name="padding">15</property>
                                 <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <widget class="GtkHBox" id="hbox49">
-                                <property name="visible">True</property>
-                                <child>
-                                  <widget class="GtkAlignment" id="alignment138">
-                                    <property name="visible">True</property>
-                                    <property name="left_padding">13</property>
-                                    <child>
-                                      <widget class="GtkImage" id="image74">
-                                        <property name="visible">True</property>
-                                        <property name="yalign">0</property>
-                                        <property name="stock">gtk-info</property>
-                                      </widget>
-                                    </child>
-                                  </widget>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">0</property>
-                                  </packing>
-                                </child>
-                                <child>
-                                  <widget class="GtkAlignment" id="alignment139">
-                                    <property name="visible">True</property>
-                                    <property name="left_padding">3</property>
-                                    <child>
-                                      <widget class="GtkLabel" id="label400">
-                                        <property name="visible">True</property>
-                                        <property name="yalign">0</property>
-                                        <property name="label" translatable="yes">&lt;b&gt;Tip:&lt;/b&gt; 'Source device' refers to the name of the device as seen from the host OS.</property>
-                                        <property name="use_markup">True</property>
-                                        <property name="wrap">True</property>
-                                      </widget>
-                                    </child>
-                                  </widget>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="fill">False</property>
-                                    <property name="position">1</property>
-                                  </packing>
-                                </child>
-                              </widget>
-                              <packing>
-                                <property name="position">1</property>
                               </packing>
                             </child>
                           </widget>
