--- a/src/vmm-progress.glade
+++ b/src/vmm-progress.glade
@@ -29,7 +29,8 @@
                     <property name="yalign">0</property>
                     <property name="xpad">3</property>
                     <property name="ypad">10</property>
-                    <property name="icon_name">gtk-info</property>
+                    <property name="stock">gtk-dialog-info</property>
+                    <property name="icon-size">6</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
