--- a/src/vmm-choose-cd.glade
+++ b/src/vmm-choose-cd.glade
@@ -125,7 +125,7 @@
                           <widget class="GtkLabel" id="label36">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">ISO _Location:</property>
+                            <property name="label" translatable="yes">_Location:</property>
                             <property name="use_underline">True</property>
                             <property name="mnemonic_widget">iso-path</property>
                           </widget>
@@ -194,7 +194,7 @@
               </widget>
             </child>
             <child>
-              <widget class="GtkLabel" id="label35">
+              <widget class="GtkLabel" id="title-label">
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">&lt;b&gt;CD Source Device Or File&lt;/b&gt;</property>
                 <property name="use_markup">True</property>
