--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -922,14 +922,14 @@
                                           <widget class="GtkTable" id="table5">
                                             <property name="visible">True</property>
                                             <property name="border_width">3</property>
-                                            <property name="n_rows">3</property>
+                                            <property name="n_rows">5</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">6</property>
                                             <property name="row_spacing">6</property>
                                             <child>
                                               <widget class="GtkLabel" id="label44">
                                                 <property name="visible">True</property>
-                                                <property name="xalign">1</property>
+                                                <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">Status:</property>
                                               </widget>
                                               <packing>
@@ -942,7 +942,7 @@
                                             <child>
                                               <widget class="GtkLabel" id="label68">
                                                 <property name="visible">True</property>
-                                                <property name="xalign">1</property>
+                                                <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">UUID:</property>
                                               </widget>
                                               <packing>
@@ -955,7 +955,7 @@
                                             <child>
                                               <widget class="GtkLabel" id="label43">
                                                 <property name="visible">True</property>
-                                                <property name="xalign">1</property>
+                                                <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">Name:</property>
                                               </widget>
                                               <packing>
@@ -1025,6 +1025,54 @@
                                                 <property name="right_attach">2</property>
                                                 <property name="x_options">GTK_FILL</property>
                                                 <property name="y_options">GTK_FILL</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="label24">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">0</property>
+                                                <property name="label" translatable="yes">Description:</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="top_attach">3</property>
+                                                <property name="bottom_attach">4</property>
+                                                <property name="x_options">GTK_FILL</property>
+                                                <property name="y_options">GTK_FILL</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkScrolledWindow" id="scrolledwindow2">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="hscrollbar_policy">automatic</property>
+                                                <property name="vscrollbar_policy">automatic</property>
+                                                <property name="shadow_type">in</property>
+                                                <child>
+                                                  <widget class="GtkTextView" id="overview-description">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="wrap_mode">word</property>
+                                                  </widget>
+                                                </child>
+                                              </widget>
+                                              <packing>
+                                                <property name="left_attach">1</property>
+                                                <property name="right_attach">2</property>
+                                                <property name="top_attach">3</property>
+                                                <property name="bottom_attach">5</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkAlignment" id="alignment14">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <placeholder/>
+                                                </child>
+                                              </widget>
+                                              <packing>
+                                                <property name="top_attach">4</property>
+                                                <property name="bottom_attach">5</property>
+                                                <property name="x_options">GTK_FILL</property>
                                               </packing>
                                             </child>
                                           </widget>
