--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -2705,12 +2705,6 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <placeholder/>
-                                        </child>
-                                        <child>
-                                          <placeholder/>
-                                        </child>
-                                        <child>
                                           <widget class="GtkLabel" id="label4">
                                             <property name="visible">True</property>
                                             <property name="xalign">1</property>
@@ -2734,6 +2728,12 @@ I/O:</property>
                                             <property name="top_attach">4</property>
                                             <property name="bottom_attach">5</property>
                                           </packing>
+                                        </child>
+                                        <child>
+                                          <placeholder/>
+                                        </child>
+                                        <child>
+                                          <placeholder/>
                                         </child>
                                       </widget>
                                     </child>
@@ -2907,21 +2907,6 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="network-source-model">
-                                            <property name="visible">True</property>
-                                            <property name="xalign">0</property>
-                                            <property name="selectable">True</property>
-                                          </widget>
-                                          <packing>
-                                            <property name="left_attach">1</property>
-                                            <property name="right_attach">2</property>
-                                            <property name="top_attach">1</property>
-                                            <property name="bottom_attach">2</property>
-                                            <property name="x_options">GTK_FILL</property>
-                                            <property name="y_options"></property>
-                                          </packing>
-                                        </child>
-                                        <child>
                                           <widget class="GtkLabel" id="network-mac-address">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
@@ -2932,6 +2917,41 @@ I/O:</property>
                                             <property name="right_attach">2</property>
                                             <property name="top_attach">2</property>
                                             <property name="bottom_attach">3</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <widget class="GtkHBox" id="hbox4">
+                                            <property name="visible">True</property>
+                                            <child>
+                                              <widget class="GtkComboBox" id="network-model-combo">
+                                                <property name="visible">True</property>
+                                                <signal name="changed" handler="on_network_model_combo_changed"/>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="network-model-label">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">0</property>
+                                                <property name="label">unknown model</property>
+                                                <property name="selectable">True</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
+                                          </widget>
+                                          <packing>
+                                            <property name="left_attach">1</property>
+                                            <property name="right_attach">2</property>
+                                            <property name="top_attach">1</property>
+                                            <property name="bottom_attach">2</property>
+                                            <property name="x_options">GTK_FILL</property>
+                                            <property name="y_options"></property>
                                           </packing>
                                         </child>
                                       </widget>
@@ -3365,11 +3385,28 @@ I/O:</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="sound-model">
+                                          <widget class="GtkHBox" id="hbox11">
                                             <property name="visible">True</property>
-                                            <property name="xalign">0</property>
-                                            <property name="label">insert sound model</property>
-                                            <property name="selectable">True</property>
+                                            <child>
+                                              <widget class="GtkComboBox" id="sound-model-combo">
+                                                <property name="visible">True</property>
+                                                <signal name="changed" handler="on_sound_model_combo_changed"/>
+                                              </widget>
+                                              <packing>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkLabel" id="sound-model-label">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">0</property>
+                                                <property name="label">insert sound model</property>
+                                                <property name="selectable">True</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
